Fixed alignment on burger menu text.

--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@ li {
     right: 0;;
     bottom: 0;
     z-index: 100;
-   /* display: flex; */
+    display: flex;
     justify-content: center;
     align-items: center;
     transition: all 300ms ease;
